Infrastructure/modules/alb/main.tf
#ALB module

#LB creation 
resource "aws_lb" "main" {
  name = "${var.environment}-alb"
  internal = false
  load_balancer_type = "application"
  security_groups = [ aws_security_group.alb.id ]
  subnets = var.public_subnets

  enable_deletion_protection = false

  tags = {
    Name = "${var.environment}-alb"
    Environment = var.environment
  }
}

#Targate group creation
resource "aws_lb_target_group" "main" {
  name = "${var.environment}-tg"
  port = 8080
  protocol = "HTTP"
  vpc_id = var.vpc_id

  health_check {
    enabled = true
    healthy_threshold = 2
    interval = 30
    matcher = "200"
    path = "/"
    port = "traffic-port"
    protocol = "HTTP"
    timeout = 5
    unhealthy_threshold = 2
  }

  tags = {
    Name = "${var.environment}-tg"
    Environment = var.environment
  }

}

#AWS LB listner creation
resource "aws_lb_listener" "main" {
  load_balancer_arn = aws_lb.main.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}

#Security group for LB
resource "aws_security_group" "alb" {
  name = "${var.environment}-alb-sg"
  description = "Security group for ALB"
  vpc_id = var.vpc_id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-alb-sg"
    Environment = var.environment
  }
}
